# OpenCV_learn

./: OpenCV01.sln  README.md
OpenCV01/: CMakeLists.txt  OpenCV01.vcxproj  OpenCV01.vcxproj.filters  opencv01.cpp  opencv02.cpp  opencv03.cpp  opencv04.cpp  opencv05.cpp  opencv06.cpp  opencv07.cpp  opencv08.cpp  opencv09.cpp
OpenCV01/include/FaceDetection/lib/: libfacedetection.so.v0.0.3
OpenCV01/include/FaceDetection/lib/cmake/facedetection/: facedetectionConfig.cmake  facedetectionConfigVersion.cmake
OpenCV02/: OpenCV02.vcxproj
